--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -5,12 +5,15 @@ $btn-blue-hover: #2d75e0;
 $btn-blue-active: #2a6dd1;
 
 $bg-gray: #f2f2f2;
-
+$bg-gray-second: #f5f5f5;
 $text-gray: #595959;
 $text-gray-light: #808080;
 $text-black: #000;
 
 $white: #fff;
+
+$active-light: #b3d1ff;
+$active-lightest: #e6effd;
 
 $font-heading: 22px;
 $font-text: 17px;
@@ -32,13 +35,17 @@ $box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.08), 0px 0px 1px rgba(0, 0, 0, 0.16);
   font-size: 17px;
 }
 
+textarea {
+  font-family: inherit;
+}
+
 a {
   text-decoration: none;
   color: inherit;
 }
 
 button {
-  cursor: pointer;
+  /*  cursor: pointer;
   border: none;
   -webkit-appearance: button;
   line-height: 15px;
@@ -47,7 +54,7 @@ button {
   font-weight: 500;
   height: 42px;
   padding: 0 16px;
-  border-radius: 10px;
+  border-radius: 10px;*/
 }
 
 .avatar {
@@ -157,9 +164,18 @@ button {
 /* Buttons */
 
 .btn_login {
+  cursor: pointer;
+  border: none;
+  -webkit-appearance: button;
+  line-height: 15px;
+  font-family: var(--font-roboto);
+  font-size: $font-button;
+  font-weight: 500;
+  height: 42px;
+  padding: 0 16px;
+  border-radius: 10px;
   background: $white;
   color: $text-black;
-  font-size: 15px;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.04), 0px 1px 2px rgba(0, 0, 0, 0.1),
     inset 0px -1px 0px rgba(0, 0, 0, 0.06);
 
@@ -175,6 +191,15 @@ button {
 }
 
 .btn_sidebar {
+  cursor: pointer;
+  border: none;
+  -webkit-appearance: button;
+  line-height: 15px;
+  font-family: var(--font-roboto);
+  font-weight: 500;
+  height: 42px;
+  padding: 0 16px;
+  border-radius: 10px;
   background: $btn-blue;
   color: $white;
   font-size: 17px;
@@ -190,6 +215,12 @@ button {
 }
 
 .btn_subscribe {
+  cursor: pointer;
+  border: none;
+  -webkit-appearance: button;
+  line-height: 15px;
+  font-family: var(--font-roboto);
+  font-weight: 500;
   background: #f0f0f0;
   padding: 5px 12px;
   height: 100%;
@@ -328,6 +359,7 @@ button {
   background: $white;
   border-radius: 10px;
   padding-bottom: 4px;
+  margin-bottom: 24px;
 }
 
 .post_header {
@@ -800,4 +832,89 @@ button {
 }
 
 .subsite_feed {
+}
+
+/* Comments */
+
+.comments {
+  background: $white;
+  padding: 16px 20px;
+  border-radius: 10px;
+}
+
+.comments_header {
+  display: flex;
+  align-items: center;
+  height: 44px;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 500;
+  margin-bottom: 18px;
+}
+
+.comment_form {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  min-width: 0;
+  background: $bg-gray-second;
+  border: 1px solid rgba(0, 0, 0, 0.03);
+  transition: background-color 0.1s linear, border-color 0.1s linear,
+    box-shadow 0.1s linear;
+  border-radius: 12px;
+  padding: 11px;
+  cursor: text;
+  margin-bottom: 20px;
+
+  &:hover {
+    background-color: $white;
+    border-color: $active-light;
+    box-shadow: 0 0 0 3px $active-lightest;
+  }
+}
+
+.comment_form_textarea {
+  height: 24px;
+  grid-column: span 2;
+  box-sizing: border-box;
+  resize: none;
+  display: block;
+  width: 100%;
+  border: 0;
+  background-color: transparent;
+  outline: 0;
+  padding: 0 4px;
+  font-size: inherit;
+  line-height: inherit;
+  overflow: hidden;
+}
+
+.comment_form_actions {
+  height: 34px;
+  padding-top: 1px;
+  align-items: center;
+  display: flex;
+  cursor: default;
+  gap: 10px;
+}
+
+.comment_form_actions_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  touch-action: manipulation;
+  border: none;
+  background: none;
+  border-radius: 100%;
+
+  &:hover {
+    background: #f0f0f0;
+  }
+}
+
+.comment_form_buttons {
 }
