--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -35,6 +35,13 @@ $box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.08), 0px 0px 1px rgba(0, 0, 0, 0.16);
   font-size: 17px;
 }
 
+button {
+  border: none;
+  appearance: none;
+  font-family: inherit;
+  cursor: pointer;
+}
+
 textarea {
   font-family: inherit;
 }
@@ -1087,4 +1094,141 @@ a {
   font-weight: 500;
   margin-left: 2px;
   color: $text-gray-light;
+}
+
+/* Login */
+
+.overlay {
+  display: flex;
+  align-items: stretch;
+  justify-items: stretch;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(15px);
+  will-change: opacity;
+  animation: underlay-in 0.2s ease;
+  position: fixed;
+  z-index: 5;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.login {
+  max-width: 520px;
+  min-height: 562px;
+  margin: auto;
+  position: relative;
+  background: $white;
+  padding: 8px 0;
+  flex-grow: 2;
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  -webkit-animation: modal-enter 0.15s ease;
+  animation: modal-enter 0.15s ease;
+  will-change: transform;
+}
+
+.login_btn {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  height: 32px;
+  width: 32px;
+  padding: 4px;
+  border-radius: 100%;
+  cursor: pointer;
+  touch-action: manipulation;
+  background: none;
+
+  &:hover {
+    background: #f0f0f0;
+  }
+}
+
+.login_items {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  max-width: 320px;
+  margin: 0 auto;
+  width: 100%;
+  align-items: center;
+}
+
+.login_items_header {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 48px 0;
+}
+
+.login_items_header_logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 64px;
+  height: 64px;
+  border-radius: 16px;
+  margin-bottom: 20px;
+  background-color: #f0fcff;
+  color: $text-black;
+
+  &::before {
+    content: "";
+    pointer-events: none;
+    position: absolute;
+    border-radius: inherit;
+    box-shadow: inset 0 0 0 1.6px #0000000d;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+}
+
+.login_items_header_title {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 30px;
+}
+
+.login_items_options {
+}
+
+.login_items_options_button {
+  border-radius: 12px;
+  padding: 11px 50px;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 26px;
+  background: #f0f0f0;
+  color: $text-black;
+  margin-bottom: 16px;
+  text-align: center;
+  width: 100%;
+  position: relative;
+}
+
+.login_items_options_image {
+  position: absolute;
+  left: 16px;
+  top: 12px;
+}
+
+.login_items_signUp {
+  color: $text-gray;
+  text-align: center;
+  padding: 2px 0;
+}
+
+.login_items_signUp_link {
+  color: #307df0;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.72;
+  }
 }
